Correct align-items

--- a/web/themes/custom/sand/css/organisms.css
+++ b/web/themes/custom/sand/css/organisms.css
@@ -2241,7 +2241,6 @@ textarea {
       text-decoration: none;
       text-transform: uppercase; }
     .header .header-second .tbm-main a.tbm-link.level-1 {
-      align-items: baseline;
       display: block;
       padding: 1em; }
     .header .header-second .tbm-main a[title]:after {
